<resources>
    <string name="app_name">Project Game</string>
    <string name="google_maps_key">AIzaSyAeYuBs3a_jNV76ZmQ2FYEPkcM3u_zXwUc</string>

    <string name="start_button">Start</string>
    <string name="settings_button">Settings</string>
    <string name="quit_button">Quit</string>

    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">I have an account</string>
    <string name="sign_in">Sign in</string>
    <string name="changeAccount">Log in to another account</string>

    <string name="wood">wood</string>
    <string name="iron">iron</string>
    <string name="stone">stone</string>
    <string name="metal">metal</string>

    <string name="btnBuy">BUY</string>
    <string name="trade">Trade for</string>
    <string name="btnTrade">New trade</string>
    <string name="btnNewTrade">Trade</string>
    <string name="tvFor">for</string>

    <string name="build">Build</string>
    <string name="Build">BUILD</string>
    <string name="Built">BUILT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">hi</string>
</resources>
