<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".before_game.LoginFragment"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:fontFamily="@font/myfont"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/myfont"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:textAlignment="viewStart"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/myfont"
            android:text="@string/login"
            android:layout_gravity="center_horizontal" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/myfont"
            android:text="@string/cancel"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>