<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".before_game.Sign_inFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:fontFamily="@font/myfont"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/myfont"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/colorPrimaryDark"
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/myfont"
        android:text="@string/sign_in"
        android:textSize="13sp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>