<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.GameFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:apiKey="@string/google_api_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".game.GameFragment" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnW"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:text="@string/wood"
            android:textColor="@color/buttonBackground"
            android:textSize="10sp"
            app:backgroundTint="@color/resButton"
            app:cornerRadius="20dp"
            app:icon="@drawable/woods"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnI"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:text="@string/iron"
            android:textColor="@color/buttonBackground"
            android:textSize="10sp"
            app:backgroundTint="@color/resButton"
            app:cornerRadius="20dp"
            app:icon="@drawable/iron"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnM"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:text="@string/metal"
            android:textColor="@color/buttonBackground"
            android:textSize="10sp"
            app:backgroundTint="@color/resButton"
            app:cornerRadius="20dp"
            app:icon="@drawable/metal"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnS"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:text="@string/stone"
            android:textColor="@color/buttonBackground"
            android:textSize="10sp"
            app:backgroundTint="@color/resButton"
            app:cornerRadius="20dp"
            app:icon="@drawable/stone"
            app:iconTint="@null" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMarket"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="80dp"
        android:layout_height="68dp"
        app:icon="@drawable/market"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="56dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>